refactor: 用 OrgTypeProvider 替代 OrgType 枚举，内置单位/部门/店铺三种类型
- 新增 OrgTypeProvider 接口，支持通过 Spring 组件扩展机构类型
- 内置三个实现：UnitOrgTypeProvider(1/单位)、DeptOrgTypeProvider(2/部门)、ShopOrgTypeProvider(3/店铺)
- 删除 OrgType 接口、SysOrg.isDept() 方法
- SysOrgVO/SysOrgController 的 type switch 改为 Provider 遍历
- 新增 type-options 端点替代 orgType 字典
- LoginUser: deptId/deptName -> orgId/orgName
- SysUser: deptId -> orgId
- 前端对照更新：org 页面类型选择器改用 type-options，user 页面 deptId->orgId
- Flyway: 移除 orgType 字典